# iothsm-ta-add

./: .gitmodules
edgelet/: Cross.toml
edgelet/hsm-sys/: build.rs
edgelet/hsm-sys/azure-iot-hsm-c/: .gitignore  CMakeLists.txt
edgelet/hsm-sys/azure-iot-hsm-c/enc/: CMakeLists.txt  enc.c  enc.edl
edgelet/hsm-sys/azure-iot-hsm-c/enc/optee/: linux_gcc.mak  sub.mk  user_ta_header_defines.h  uuids.reg
edgelet/hsm-sys/azure-iot-hsm-c/src/: edge_enc_enclave_key.c  edge_enc_openssl_key.c  edge_hsm_client_crypto_ta.c  edge_hsm_client_store.c  edge_hsm_client_store.h  edge_hsm_client_store_keys.c  edge_hsm_client_store_keys_enclave.c  edge_hsm_client_store_keys_ta.c  edge_hsm_client_store_layout.c  edge_hsm_client_store_pki.c  edge_sas_enclave_key.c  edge_sas_enclave_key.h  edge_sas_key.c  hsm_client_tpm_in_mem.c  hsm_client_tpm_in_ta.c  hsm_client_tpm_in_ta.h  hsm_client_tpm_select.c  hsm_enclave.c  hsm_enclave.h  hsm_enclave_key.h  hsm_log.c
edgelet/hsm-sys/azure-iot-hsm-ta/ta/enc/: enc.vcxproj
edgelet/hsm-sys/azure-iot-hsm-ta/ta/lib/: lib.vcxproj
edgelet/hsm-sys/tests/: hsm_ctest.rs
